crates/mockiato-compiletest/tests/ui/method_with_generic_type_argument.stderr
error: Only lifetimes are supported as generic parameters on methods
 --> $DIR/method_with_generic_type_argument.rs:5:14
  |
5 |     fn greet<T>(&self, baz: T);
  |              ^
  |
note: Required for mockable traits
 --> $DIR/method_with_generic_type_argument.rs:3:1
  |
3 | #[mockable]
  | ^^^^^^^^^^^

error: aborting due to previous error

