crates/mockiato-compiletest/tests/ui/method_with_generic_type_argument.rs
use mockiato::mockable;

#[mockable]
trait Greeter {
    fn greet<T>(&self, baz: T);
}

fn main() {}
